# coaler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  CTestTestfile.cmake  Dockerfile  Makefile  README.md  benchmark_nbse.py  benchmark_results.csv  compile_commands.json  conanfile.py  configure  pyproject.toml  run.sh
.github/workflows/: build.yml  clang_format.yml  clang_tidy.yml  jobs.yml
images/ubuntu-builder-22/: Dockerfile
src/: CMakeLists.txt  Makefile  SingleAligner.cpp  SingleAligner.hpp  main.cpp
src/io/: FileNotFoundException.hpp  FileParser.cpp  FileParser.hpp  OutputWriter.cpp  OutputWriter.hpp
src/lib/: CMakeLists.txt  Makefile
src/lib/coaler/core/: Core.cpp  Core.hpp  Forward.hpp  Matcher.cpp  Matcher.hpp  MatcherMCS.cpp  MatcherMCS.h
src/lib/coaler/embedder/: BucketDistributor.cpp  BucketDistributor.hpp  ConformerEmbedder.cpp  ConformerEmbedder.hpp  CoreSymmetryCalculator.cpp  CoreSymmetryCalculator.hpp  Forward.hpp  SubstructureAnalyzer.cpp  SubstructureAnalyzer.hpp
src/lib/coaler/geometric/: GeometricOptimizer.hpp
src/lib/coaler/geometry/: GeometryOptimizer.cpp  GeometryOptimizer.hpp
src/lib/coaler/io/: FileNotFoundException.hpp  FileParser.cpp  FileParser.hpp  Forward.hpp  OutputWriter.cpp  OutputWriter.hpp
src/lib/coaler/multialign/: AssemblyOptimizer.cpp  AssemblyOptimizer.hpp  AssemblyScorer.cpp  AssemblyScorer.hpp  Constants.hpp  Forward.hpp  LigandAlignmentAssembly.cpp  LigandAlignmentAssembly.hpp  MultiAligner.cpp  MultiAligner.hpp  MultiAlignerResult.hpp  OptimizerState.hpp  PoseRegister.cpp  PoseRegister.hpp  PoseRegisterBuilder.cpp  PoseRegisterBuilder.hpp  PoseRegisterCollection.cpp  PoseRegisterCollection.hpp  Scorer.hpp  StartingAssemblyGenerator.cpp  StartingAssemblyGenerator.hpp
src/lib/coaler/multialign/models/: Alias.hpp  AssemblyIDManager.cpp  AssemblyIDManager.hpp  Forward.hpp  Ligand.cpp  Ligand.hpp  LigandPair.cpp  LigandPair.hpp  LigandVector.cpp  LigandVector.hpp  PairwiseAlignments.cpp  PairwiseAlignments.hpp  PosePair.cpp  PosePair.hpp  UniquePoseID.cpp  UniquePoseID.hpp  UniquePoseIdentifier.cpp  UniquePoseSet.hpp
src/lib/coaler/multialign/scorer/: AlignmentScorer.cpp  AlignmentScorer.hpp  AssemblyScorer.cpp  AssemblyScorer.hpp  Scorer.hpp
src/lib/coaler/singlealign/: SingleAligner.cpp  SingleAligner.hpp
src/multialign/: AssemblyScorer.cpp  AssemblyScorer.hpp  Forward.hpp  Ligand.cpp  Ligand.hpp  LigandAlignmentAssembly.cpp  LigandAlignmentAssembly.hpp  LigandPair.hpp  MultiAligner.cpp  MultiAligner.hpp  MultiAlignerResult.hpp  PairwiseAlignment.cpp  PairwiseAlignment.hpp  PosePair.cpp  PoseRegister.cpp  PoseRegister.hpp  PoseRegisterBuilder.cpp  PoseRegisterBuilder.hpp  PoseRegisterCollection.cpp  PoseRegisterCollection.hpp  StartingAssemblyGenerator.cpp  StartingAssemblyGenerator.hpp
src/multialign/BasicClasses/: Forward.hpp  Ligand.cpp  Ligand.hpp  LigandPair.cpp  LigandPair.hpp  PosePair.cpp  PosePair.hpp  UniquePoseIdentifier.cpp  UniquePoseIdentifier.hpp
src/output/: OutputParser.cpp  OutputParser.hpp  OutputWriter.cpp  OutputWriter.hpp
src/parser/: FileNotFoundException.hpp  FileParser.cpp  FileParser.hpp
src/parsers/: FileNotFoundException.h  FileNotFoundException.hpp  FileParserSmiles.cpp  FileParserSmiles.h  FileParserSmiles.hpp
src/singlealign/: SingleAligner.cpp  SingleAligner.hpp
test/: CMakeLists.txt  CTestTestfile.cmake  LigandAlignmentAssemblyTester.cpp  LigandPairTester.cpp  LigandTester.cpp  Makefile  MutliAlignerTester.cpp  PoseRegisterTester.cpp  conformer_generator_tester.cpp  core_symmetry_tester.cpp  core_tester.cpp  ligand_alignment_assembly_tester.cpp  ligand_pair_tester.cpp  ligand_tester.cpp  multi_aligner_tester.cpp  pose_pair_tester.cpp  pose_register_builder_tester.cpp  pose_register_tester.cpp  test_bucket_distributor.cpp  test_conformer_embedder.cpp  test_conformer_generator.cpp  test_core.cpp  test_file_parser.cpp  test_geometric_optimizer.cpp  test_geometry_optimizer.cpp  test_helper.h  test_ligand.cpp  test_ligand_alignment_assembly.cpp  test_ligand_pair.cpp  test_mcs_params.cpp  test_multi_aligner.cpp  test_output_parser.cpp  test_output_writer.cpp  test_pairwise_mcs.cpp  test_pose_pair.cpp  test_pose_register.cpp  test_pose_register_builder.cpp  test_runner.cpp  test_single_aligner.cpp  unique_pose_identifier_tester.cpp
test/data/: 1d0s.smi  1d0s_5.smi  2zsd.smi  AID_1806504.smi  AID_20.smi  AID_20_nostereo.smi  AID_20_uniq.smi  AID_341469.smi  AID_5.smi  AID_5_dup.smi  AID_test_murcko.smi  bad_set.smi  different_orientation_benzene.smi  easyMCS.smi  example_smiles.smi  multiple_hits_benzene.smi  simple_molecules.smi  testMurcko.smi  testMurckoHuge.smi  testMurckoLarge.smi  testMurckoMedium.smi  testMurckoSmall.smi  test_nbse.smi  two_mols.sdf
test/multialign/: PoseRegisterTester.cpp
