[tool.poetry]
name = "rdkitskeletoncpp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rdkit = "^2023.9.1"
conan = "^2.0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
